@@ -49,6 +49,7 @@ Changes:
 - Add random SCSI serial when creating iSCSI target.
 - Add auto IPv6 fot WebGUI.
 - Add AES-CBC at disk encryption.
+- Add TCP wrapper check in FTP service.
 - Wait response of LAN interface if static with gateway.
 - Run umount before iSCSI initiator shutdown.
 - Remount all after netif is up for iSCSI device.
